# Parallel_sorting

./: .gitignore  CMakeLists.txt  README.md  plot_results.py
src/: main.cpp  mergesort.h  quicksort.h  utils.h
